sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:90: error: not found: value getNombreIndex
  for (c <- 0 to getNombreIndex()-1) {
                 ^SelectBaseball:92: error: not found: value getNombreIndex
    for (x <- 0 to getNombreIndex()-c-2) {
                   ^